2012-11-18  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: sourceCpp embedded R code; print warning if 
        no export attributes are found in source file
        * src/AttributesParser.h: sourceCpp embedded R code
        * src/AttributesParser.cpp: sourceCpp embedded R code; new scheme
        for mixing user and generated C++ headers
        * src/Attributes.cpp: sourceCpp embedded R code; include <Rcpp.h>
        above generated modules
        * man/sourceCpp.Rd: documentation updates
        * man/interfacesAttribute.Rd: documentation updates

2012-11-18  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/vector/converter.h: allow CharacterVector::create( NA_STRING )
        * include/Rcpp/sugar/functions/mapply/mapply_2.h: more cases in mapply

2012-11-17  Dirk Eddelbuettel  <edd@debian.org>

	* inst/doc/Rcpp-modules/Rcpp-modules.Rnw: Change free function name
	'range' to 'uniformRange' to protect it from getting clobbered by the
	new sugar function range.

2012-11-17  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/internal/wrap_end.h: have calls to wrap as late as
	possible so that they "see" all (potentially user defined) overloads
	of wrap.
        * include/Rcpp/internal/SEXP_Iterator.h: directly iterate over SEXP.
        const iterator for List and ExpressionVector

2012-11-16  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/vector/Vector.h : added static methods Vector::is_na
	and Vector::get_na
        * include/Rcpp/sugar/functions/setdiff.h: initial version of setdiff
	and intersect
        * include/Rcpp/vector/MatrixColumn.h: dealing with const-ness
        * include/Rcpp/vector/MatrixRow.h: dealing with const-ness
        * include/Rcpp/vector/traits.h: dealing with const-ness
        * include/Rcpp/vector/proxy.h: dealing with const-ness
        * include/Rcpp/vector/MatrixBase.h: dealing with const-ness
        * include/Rcpp/vector/Vector.h: dealing with const-ness
